<resources>

    <string name="app_name">InfusionSystem</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="ip">IP地址</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="infusion_activity">InfusionActivity</string>
    <string name="ip_modify">IpModify</string>
    <string name="login_cancel_content_discription">login cancel</string>
    <string name="login_confirm_content_discription">login confirm</string>
    <string name="name_text">用户名:</string>
    <string name="password_text">密    码:</string>
    <string name="role_text">角    色:</string>
    <string name="department_text">单    位:</string>
    <string name="spinner_role_text">请选择角色</string>
    <string name="spinner_department_text">请选择单位</string>
    <string name="serial_code">条形码</string>
    <string name="identifier">标识号</string>
    <string name="name">姓名</string>
    <string name="gender">性    别</string>
    <string name="age">年龄</string>
    <string name="seat_no">座位号</string>
    <string name="diagnose">诊断</string>
    <string name="serials_no">序号</string>
    <string name="medicine_name">药品名称</string>
    <string name="dosage">一次剂量</string>
    <string name="unit">单位</string>
    <string name="frequency">执行频率</string>
    <string name="skin_test">皮试</string>
    <string name="result">结果</string>
    <string name="puncture_desc">注射</string>
    <string name="continue_desc">接针</string>
    <string name="pull_desc">拔针</string>
    
    
    <string name="serial_code_sample">000000001</string>
    <string name="identifier_sample">000000002</string>
    <string name="name_sample">测试者1</string>
    <string name="gender_sample">男</string>
    <string name="seat_sample">016</string>
    <string name="age_sample">35</string>
    <string name="diagnose_sample">诊断详情</string>
    
    <string name="serials_no_sample">1</string>
    <string name="medicine_name_sample">氯化钠</string>
    <string name="dosage_sample">250.0</string>
    <string name="unit_sample">ml</string>
    <string name="frequency_sample">每日一次</string>
    <string name="skin_test_sample">无</string>
    <string name="result_sample">阳性</string>
</resources>