<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_image"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corners_bg" >

            <TextView
                 android:layout_width="62dp"
                 android:layout_height="24dp"
                 android:layout_gravity="center"
                 android:fadingEdge="horizontal"
                 android:gravity="center"
                 android:text="@string/continue_desc"
                 android:textColor="#4876FF"
                  />
            
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:paddingTop="13dp"
        android:paddingLeft="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/serial_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serial_code"
                android:width="47dp" />

            <EditText
                android:id="@+id/serial"
                android:layout_width="179dp"
                android:layout_height="33dp"
                android:inputType="text"
                android:textSize="10dp" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/identifier_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/identifier"
                android:width="47dp" />

            <EditText
                android:id="@+id/identifier"
                android:layout_width="179dp"
                android:layout_height="33dp"
                android:inputType="text"
                android:textSize="10dp" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dip"
        android:background="#F0F0F0" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:paddingLeft="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:width="47dp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="86dp"
                    android:layout_height="33dp" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/gender_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:width="47dp" />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="97dp"
                    android:layout_height="33dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/age_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:width="47dp" />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="86dp"
                    android:layout_height="33dp" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/seat_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seat_no"
                    android:width="47dp" />

                <TextView
                    android:id="@+id/seat"
                    android:layout_width="97dp"
                    android:layout_height="33dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/diagnose_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diagnose"
                android:width="47dp" />

            <TextView
                android:id="@+id/diagnose"
                android:layout_width="97dp"
                android:layout_height="33dp" >
            </TextView>
        </LinearLayout>
    </LinearLayout>
    
    <HorizontalScrollView android:id="@+id/HorizontalScrollView01"  
        android:layout_height="fill_parent" android:layout_width="fill_parent">  

        <ListView
            android:id="@+id/ListView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
        </ListView>  
    </HorizontalScrollView>
</LinearLayout>